# manus-sandbox-env

./: .coverage  .gitignore  .markdownlint.json  CONTRIBUTING.md  LIBRARY.md  Manus_Automation_Suite_Report.md  Quality_Gate_Implementation_Report.md  README.md  Universal_Compatibility_Report.md  pyproject.toml  run_tests.py  setup.sh  test_config.yaml
.github/workflows/: ci.yml
config/: test_config.yaml
docs/: Auto_Doc_Project_Report.md  Automated_Testing_Report.md  GitHub_Connector_Test_Report.md  Quality_Gate_Implementation_Report.md
experiments/: README.md  messy_doc.md  messy_script.py
scripts/: __init__.py  autodoc.py  manus_cli.py  pre_commit.py  quality_gate.py  release.py  repo_cli.py  run_tests.py  sandbox_info.py  setup_hooks.py  sys_info.py
tests/: conftest.py  test_agent_validation.py  test_api_smoke.py  test_autodoc.py  test_build_verification.py  test_feature_flags.py  test_file_manager.py  test_sqlite_integrity.py
tools/: __init__.py  feature_flags.py  file_manager.py  github_helper.py
